--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,3 +10,4 @@ Description: The purpose of the `SmaxN` package is to compute an extension
   of the maxN index (maximum of abundance seen during a given period of time)
   by using temporally synchronised cameras. It can use the distance between
   cameras and the swimming speed of the studied species to improve the estimate.
+RoxygenNote: 7.1.1
