--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,6 @@
 Package: SmaxN
 Title: Compute synchronised maxN when using temporally synchronised cameras
+Version: 0.1
 Authors@R:
     person(given   = "Camille",
            family  = "Magneville",
