--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -1,6 +1,10 @@
 pandoc: '2.15'
 pkgdown: 1.6.1
 pkgdown_sha: ~
-articles: {}
-last_built: 2022-10-20T08:45Z
+articles:
+  How_to_compute_SmaxN: How_to_compute_SmaxN.html
+last_built: 2022-10-20T12:40Z
+urls:
+  reference: https://cmlmagneville.github.io/SmaxN//reference
+  article: https://cmlmagneville.github.io/SmaxN//articles
 
