--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -1,7 +1,7 @@
-pandoc: '2.15'
-pkgdown: 1.6.1
+pandoc: 2.19.2
+pkgdown: 2.0.7
 pkgdown_sha: ~
 articles:
   How_to_compute_SmaxN: How_to_compute_SmaxN.html
-last_built: 2022-10-26T13:09Z
+last_built: 2023-01-09T10:55Z
 
