--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -1,7 +1,10 @@
-pandoc: 2.19.2
+pandoc: 3.1.1
 pkgdown: 2.0.7
 pkgdown_sha: ~
 articles:
   How_to_compute_SmaxN: How_to_compute_SmaxN.html
-last_built: 2023-04-27T09:06Z
+last_built: 2024-03-08T14:11Z
+urls:
+  reference: https://cmlmagneville.github.io/SmaxN/reference
+  article: https://cmlmagneville.github.io/SmaxN/articles
 
